[workspace]
members = ["macro"]

[package]
name = "bitcoin-script"
version = "0.3.0"
authors = ["Lukas George <lukas@zerosync.org>"]
edition = "2021"
description = "Inline Bitcoin scripts"
license = "MIT"
repository = "https://github.com/BitVM/rust-bitcoin-script"

[dependencies]
bitcoin = { version = "0.32.5", features = ["rand-std", "serde"] }
lazy_static = "1.5.0"
script-macro = { path = "./macro" }
stdext = "0.3.3"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
