[workspace]
members = ["macro"]

[package]
name = "bitcoin-script"
version = "0.3.0"
authors = ["Lukas George <lukas@zerosync.org>"]
edition = "2021"
description = "Inline Bitcoin scripts"
license = "MIT"
repository = "https://github.com/BitVM/rust-bitcoin-script"

[dependencies]
bitcoin = { version = "0.32.5", features = ["serde"] }
script-macro = { path = "./macro" }
stdext = "0.3.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
